--- a/po/main/nl.po
+++ b/po/main/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-08 19:21+0000\n"
-"PO-Revision-Date: 2016-08-08 20:17+0000\n"
+"PO-Revision-Date: 2016-08-09 21:56+0000\n"
 "Last-Translator: shypike <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-08-09 05:44+0000\n"
+"X-Launchpad-Export-Date: 2016-08-10 05:40+0000\n"
 "X-Generator: Launchpad (build 18169)\n"
 
 #: SABnzbd.py:313 [Error message]
@@ -354,7 +354,8 @@ msgstr "%s => ontbreekt op alle servers, overslaan"
 
 #: sabnzbd/decoder.py:261
 msgid "UUencode detected, only yEnc encoding is supported [%s]"
-msgstr "UUencode codering gevonden, SABnzbd verwerkt alleen yEnc codering [%s]"
+msgstr ""
+"UUencode codering gevonden, SABnzbd verwerkt alleen yEnc codering [%s]"
 
 #: sabnzbd/dirscanner.py:140 [Error message] # sabnzbd/dirscanner.py:225 [Error message]
 msgid "Error removing %s"
