Extend Rating functionality
Fields can now also be submitted as X-RATING headers during the URL-grab. Instead of just supplying a host, it is also possible to send a X-RATING-URL for more flexability
More: https://github.com/nZEDb/nZEDb/issues/2235

--- a/po/main/en.po
+++ b/po/main/en.po
@@ -149,8 +149,9 @@ msgid ""
 "Enhanced functionality including ratings and extra status information is "
 "available when connected to OZnzb indexer."
 msgstr ""
-"Enhanced functionality including ratings and extra status information is "
-"available when connected to a supported indexer."
+"Indexers can supply information when a job is added <strong>or</strong> "
+"using the settings below to provide ratings and extra status information. "
+"<br>The Server address and API key settings can be left blank, depending on your indexer. "
 
 #: sabnzbd/skintext.py:523
 msgid ""
