--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -72,19 +72,14 @@ Essential modules
 
 Optional modules
     unzip >= 6.00           http://www.info-zip.org/
+    cryptography >= 1.5     https://cryptography.io/ use "pip install cryptography"
     7zip >= 9.20            http://www.7zip.org/
-    yenc module >= 0.3      http://sabnzbd.sourceforge.net/yenc-0.3.tar.gz
+    yenc module >= 0.3      http://sabnzbd.sourceforge.net/yenc-0.3.tar.gz 
+                            or use "pip install yenc"
                             http://sabnzbd.sourceforge.net/yenc-0.3-w32fixed.zip (Win32-only)
 
-Optional modules Windows
-    pyopenssl >= 0.13       "pip install pyopenssl"
-                            or http://www.egenix.com/products/python/pyOpenSSL/
-                            (Binaries, including the OpenSSL libraries)
-
 Optional modules Unix/Linux/OSX
-    pyopenssl >= 0.15       http://pypi.python.org/pypi/pyOpenSSL
     openssl => ?            http://www.openssl.org/
-                            Make sure the OpenSSL libraries match with PyOpenSSL
     pynotify                Should be part of GTK for Python support on Debian/Ubuntu
                             If not, you cannot use the NotifyOSD feature.
 
