--- a/README.mkd
+++ b/README.mkd
@@ -1,67 +1,47 @@
-Release Notes  -  SABnzbd 1.1.0RC4
-==================================
+Release Notes  -  SABnzbd 1.1.0
+===============================
 
-## What's new in 1.1.0RC4
+## What's new in 1.1.0
+- Login via HTML-form instead of basic authentication
 - Can now download zipped NZB files from indexer
-- Optimizations in the Downloader
-- Move some seldom used options to Special
-- Prevent watched folder scan crash on invalid file names
 - Prevent action of password managers on Server page
-- Correct display of amount downloaded
 - Faster initial connections to servers with multiple IP-addresses (HappyEyeBalls)
-- Display days when ETA is above 24h
 - Support of more Rating headers (for indexers that support it)
-- Smaller optimizations and bug fixes
-
-
-## What's new in 1.1.0RC3
-- Fix errors when saving job files to disk
-- Not all failed items in History had "Retry" buttons
 - Enable upload of multiple NZBs from the UI
-- Fix another stalling issue
-- Restore support for multi-volume 7zip files
+- Performance improvements of download process
+- Glitter now offers Compact and Tabbed layouts (similar to old Classic skin)
+- Glitter shows progress notifications for larger operations
+- Added delayed download feature (for when your Usenet is behind the indexers)
+- Repair blocks are added prospectively during download when needed (reducing extra par2 verification runs)
+- Added notification scripts for custom notification services
+- Log files are now anonymized automatically, for easier posting on public websites
+- Added censored INI file to log download
+
+## Bug fixes
+- Fix errors when saving job files to disk
 - Prevent "lock" errors in the History database
-- Lots of small fixes and improvements
-
-
-## What's new in 1.1.0RC2
+- Restore support for multi-volume 7zip files
 - Fix XSS vulnerability on OSX and Unix**
-- Fix for stalling when using "prospective par2 downloading"
-- Include the Python module "six" to prevent issues on some embedded systems
-- Fix problem with deleting files in NZB details view
-- Fix portable.cmd
 - Restore scanning for passwords after NZB name edit
+- Fix portable.cmd
+- Fix for stalling download at 99% (when using prospective downloading)
+- Fix problem with deleting files in NZB details view
 - Prevent old shutdown-page from stopping a new SABnzbd instance
+- Prevent watched folder scan crash on invalid file names
+
+
+## Changes:
+- New SABnzbd logo
+- Job password is now a separate field and not included in the job-title anymore
+- Move some seldom used options to Special
+- Now requires Python 2.7 (2.6 no longer supported)
+- If filename occurs twice in NZB, only larger file is added
+- Display days when ETA is above 24h, affects API too
+- Bump self-signed certificate to sha256
 
 ** The XSS vulnerability was discovered by Han Sahin from Securify BV.
 Thank you, Han.
 
-## What's new in 1.1.0RC1
-- Fix for stalling download at 99% (when using prospective downloading)
-- Fix History updates in Glitter
-- Add censored INI file to log download
-- Requires Python 2.7
-
-
-## What's new in 1.1.0Beta1
-- Performance improvements of download process
-- Performance improvements of and Glitter/Plush
-- Glitter now offers Compact and Tabbed layouts (similar to old Classic skin)
-- Glitter shows progress notifications for larger operations
-- Login via HTML-form instead of basic authentication
-- Added Propagation delay feature
-- Repair blocks are added prospectively during download when needed (reducing extra par2 verification runs)
-- Added notification scripts for custom notification services
-- New SABnzbd logo
-- Debug-logs are now anonymized automatically, for easier posting on public websites
-
-## Bug fixes:
-- Many fixes of Glitter and Config pages
-- Bump self-signed certificate to sha256
-- If filename occurs twice in NZB, only larger file is added
-
-## API changes:
-- Job password is now a separate field and not included in the job-title anymore
 
 
 ## About
@@ -74,7 +54,7 @@ Thank you, Han.
   (c) Copyright 2007-2016 by "The SABnzbd-team" \<team@sabnzbd.org\>
 
 
-### IMPORTANT INFORMATION about release 1.0.0
+### IMPORTANT INFORMATION about release 1.0.0+
 <https://sabnzbd.org/wiki/introducing-1-0>
 
 ### Known problems and solutions
