--- a/README.mkd
+++ b/README.mkd
@@ -3,31 +3,19 @@ Release Notes  -  SABnzbd 1.1.0
 
 ## What's new in 1.1.0
 - Login via HTML-form instead of basic authentication
-- Can now download zipped NZB files from indexer
+- Glitter now offers Compact and Tabbed layouts (similar to old Classic skin)
+- Notification scripts for custom notification services
+- Enable upload of multiple NZBs from the UI
+- Performance improvements of download process
+- Added delayed download feature (for when your Usenet is behind the indexers)
+- Repair blocks are added prospectively during download when needed (reducing extra par2 verification runs)
 - Prevent action of password managers on Server page
 - Faster initial connections to servers with multiple IP-addresses (HappyEyeBalls)
 - Support of more Rating headers (for indexers that support it)
-- Enable upload of multiple NZBs from the UI
-- Performance improvements of download process
-- Glitter now offers Compact and Tabbed layouts (similar to old Classic skin)
 - Glitter shows progress notifications for larger operations
-- Added delayed download feature (for when your Usenet is behind the indexers)
-- Repair blocks are added prospectively during download when needed (reducing extra par2 verification runs)
-- Added notification scripts for custom notification services
 - Log files are now anonymized automatically, for easier posting on public websites
 - Added censored INI file to log download
-
-## Bug fixes
-- Fix errors when saving job files to disk
-- Prevent "lock" errors in the History database
-- Restore support for multi-volume 7zip files
-- Fix XSS vulnerability on OSX and Unix**
-- Restore scanning for passwords after NZB name edit
-- Fix portable.cmd
-- Fix for stalling download at 99% (when using prospective downloading)
-- Fix problem with deleting files in NZB details view
-- Prevent old shutdown-page from stopping a new SABnzbd instance
-- Prevent watched folder scan crash on invalid file names
+- Can now download zipped NZB files from indexer
 
 
 ## Changes:
@@ -36,8 +24,23 @@ Release Notes  -  SABnzbd 1.1.0
 - Move some seldom used options to Special
 - Now requires Python 2.7 (2.6 no longer supported)
 - If filename occurs twice in NZB, only larger file is added
-- Display days when ETA is above 24h, affects API too
-- Bump self-signed certificate to sha256
+- Display days when ETA is above 24h
+- API information now uses day/hour/min/sec notation when ETA above 24h
+- Bump self-signed certificate to sha256 (only for newly created)
+
+
+## Bug fixes
+- Fix errors when saving job files to disk
+- Prevent "lock" errors in the History database
+- Restore support for multi-volume 7zip files
+- Restore scanning for passwords after NZB name edit
+- Fix portable.cmd
+- Fix for stalling download at 99% (when using prospective downloading)
+- Fix problem with deleting files in NZB details view
+- Prevent old shutdown-page from stopping a new SABnzbd instance
+- Prevent watched folder scan crash on invalid file names
+- Fix XSS vulnerability on OSX and Unix**
+
 
 ** The XSS vulnerability was discovered by Han Sahin from Securify BV.
 Thank you, Han.
