--- a/po/main/de.po
+++ b/po/main/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: sabnzbd\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2016-08-08 19:21+0000\n"
-"PO-Revision-Date: 2015-12-28 10:18+0000\n"
-"Last-Translator: Safihre <safihre@sabnzbd.org>\n"
+"PO-Revision-Date: 2016-08-18 20:33+0000\n"
+"Last-Translator: Michael Arlt <info@michael-arlt.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2016-08-09 05:44+0000\n"
-"X-Generator: Launchpad (build 18169)\n"
+"X-Launchpad-Export-Date: 2016-08-19 05:42+0000\n"
+"X-Generator: Launchpad (build 18176)\n"
 
 #: SABnzbd.py:313 [Error message]
 msgid "Failed to start web-interface"
@@ -515,11 +515,11 @@ msgstr "Server-Adresse \"%s:%s\" ist ungültig."
 
 #: sabnzbd/interface.py:193
 msgid "User logged in to the web interface"
-msgstr ""
+msgstr "Benutzer im Web-Interface angemeldet"
 
 #: sabnzbd/interface.py:193 # sabnzbd/notifier.py:75 [Notification]
 msgid "User logged in"
-msgstr ""
+msgstr "Benutzer angemeldet"
 
 #: sabnzbd/interface.py:237 [Warning message]
 msgid "Missing Session key"
@@ -1001,15 +1001,15 @@ msgstr "Konnte Pushbullet-Nachricht nicht versenden"
 
 #: sabnzbd/notifier.py:512 [Error message] # sabnzbd/notifier.py:513
 msgid "Script returned exit code %s and output \"%s\""
-msgstr ""
+msgstr "Skript gab Fehlercode %s und Ausgabe \"%s\" zurück"
 
 #: sabnzbd/notifier.py:517
 msgid "Notification script \"%s\" does not exist"
-msgstr ""
+msgstr "Benachrichtigungsskript \"%s\" existiert nicht"
 
 #: sabnzbd/notifier.py:525 # sabnzbd/notifier.py:527
 msgid "Failed to send Windows notification"
-msgstr ""
+msgstr "Windows Benachrichtigung konnte nicht gesendet werden"
 
 #: sabnzbd/nzbqueue.py:82 [Warning message] # sabnzbd/postproc.py:96 [Warning message]
 msgid "Old queue detected, use Status->Repair to convert the queue"
@@ -1970,15 +1970,15 @@ msgstr "oder weniger"
 
 #: sabnzbd/skintext.py:136
 msgid "Log in"
-msgstr ""
+msgstr "Anmelden"
 
 #: sabnzbd/skintext.py:137
 msgid "Log out"
-msgstr ""
+msgstr "Abmelden"
 
 #: sabnzbd/skintext.py:138
 msgid "Remember me"
-msgstr ""
+msgstr "Automatische Anmeldung"
 
 #: sabnzbd/skintext.py:141 [SABnzbd's theme line]
 msgid "The automatic usenet download tool"
@@ -2031,7 +2031,7 @@ msgstr "IRC"
 
 #: sabnzbd/skintext.py:157 [Main menu item]
 msgid "Issues"
-msgstr ""
+msgstr "Probleme"
 
 #: sabnzbd/skintext.py:158 [Main menu item] # sabnzbd/skintext.py:497
 msgid "General"
@@ -2514,6 +2514,8 @@ msgstr "Die Änderungen wurden nicht gespeichert und werden verloren gehen."
 msgid ""
 "When your IP address changes or SABnzbd is restarted the session will expire."
 msgstr ""
+"Falls sich deine IP Adresse ändert oder SABnzbd neu startet, wird deine "
+"Session ungültig"
 
 #: sabnzbd/skintext.py:309
 msgid "Version"
@@ -2794,7 +2796,7 @@ msgstr "Volles Webinterface"
 
 #: sabnzbd/skintext.py:374
 msgid "Only external access requires login"
-msgstr ""
+msgstr "Nur externer Zugriff benötigt eine Anmeldung"
 
 #: sabnzbd/skintext.py:377
 msgid ""
@@ -3919,19 +3921,19 @@ msgstr "Geräte, welche die Benachrichtigungen empfangen sollen"
 
 #: sabnzbd/skintext.py:664 [Header for Notification Script notification section]
 msgid "Notification Script"
-msgstr ""
+msgstr "Benachrichtigungs-Skript"
 
 #: sabnzbd/skintext.py:665 [Notification Script settings]
 msgid "Enable notification script"
-msgstr ""
+msgstr "Aktiviere Benachrichtigungs-Skript"
 
 #: sabnzbd/skintext.py:668 [Notification Scriptsettings]
 msgid "Executes a custom script"
-msgstr ""
+msgstr "Führt ein benutzerdefiniertes Skript aus"
 
 #: sabnzbd/skintext.py:669 [Notification Scriptsettings]
 msgid "Which script should we execute for notification?"
-msgstr ""
+msgstr "Welches Skript sollte für die Benachrichtigung ausgeführt werden"
 
 #: sabnzbd/skintext.py:673
 msgid ""
@@ -4331,7 +4333,7 @@ msgstr "Extra Warteschlangen-Spalte"
 
 #: sabnzbd/skintext.py:801
 msgid "Extra history column"
-msgstr ""
+msgstr "Extra Verlauf-Spalte"
 
 #: sabnzbd/skintext.py:802 # sabnzbd/skintext.py:895
 msgid "page"
@@ -4437,7 +4439,7 @@ msgstr "Benutzerdefiniert"
 
 #: sabnzbd/skintext.py:836
 msgid "Compact layout"
-msgstr ""
+msgstr "Kompaktes Layout"
 
 #: sabnzbd/skintext.py:837
 msgid "Tabbed layout <br/>(separate queue and history)"
@@ -4493,19 +4495,19 @@ msgstr "Sortieren nach Grösse <small>Grösste&rarr;Kleiste</small>"
 
 #: sabnzbd/skintext.py:850
 msgid "Uploading"
-msgstr ""
+msgstr "Wird hochgeladen"
 
 #: sabnzbd/skintext.py:851
 msgid "Forcing disconnect"
-msgstr ""
+msgstr "Erzwinge Trennung"
 
 #: sabnzbd/skintext.py:852
 msgid "Removing job"
-msgstr ""
+msgstr "Entferne Job"
 
 #: sabnzbd/skintext.py:853
 msgid "Removing jobs"
-msgstr ""
+msgstr "Entferne Jobs"
 
 #: sabnzbd/skintext.py:861 # sabnzbd/skintext.py:930
 msgid "Prev"
@@ -4868,7 +4870,7 @@ msgstr "Unerlaubter Zugriff"
 
 #: sabnzbd/urlgrabber.py:128
 msgid "File not on server"
-msgstr ""
+msgstr "Datei nicht auf dem Server"
 
 #: sabnzbd/urlgrabber.py:250 [Error message]
 msgid "URLGRABBER CRASHED"
