--- a/README.mkd
+++ b/README.mkd
@@ -21,8 +21,8 @@ Release Notes  -  SABnzbd 1.2.0
   (c) Copyright 2007-2016 by "The SABnzbd-team" \<team@sabnzbd.org\>
 
 
-### IMPORTANT INFORMATION about release 1.0.0+
-<https://sabnzbd.org/wiki/introducing-1-0>
+### IMPORTANT INFORMATION about release 1.x.x
+<https://sabnzbd.org/wiki/new-features-and-changes>
 
 ### Known problems and solutions
 - Read the file "ISSUES.txt"
